--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,14 +7,28 @@
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.PlaylistMaket"
-        tools:targetApi="31" >
+        android:supportsRtl="true">
+
+        <activity
+            android:name=".SearchActivity"
+            android:exported="false"
+            android:theme="@style/SettingsActivity"/>
+
+        <activity
+            android:name=".MediaLibraryActivity"
+            android:exported="false"
+            android:theme="@style/SettingsActivity"/>
+
+        <activity
+            android:name=".SettingsActivity"
+            android:exported="false"
+            android:theme="@style/SettingsActivity"/>
+
         <activity
             android:name=".MainActivity"
-            android:exported="true" >
+            android:exported="true"
+            android:theme="@style/Base.Theme.PlaylistMaker">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
